--- a/popup/popup.css
+++ b/popup/popup.css
@@ -17,3 +17,9 @@ html, body {
 .details-text:hover{
     color:yellow;
 }
+.header {
+    display: flex;
+    justify-content: space-around;
+    background-color:blue;
+
+}
